# fastapi_weather_api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/weather_api/: app.py  settings.py
src/weather_api/routers/: weather.py
src/weather_api/services/: get_weather.py  redis.py
src/weather_api/static/: index.html
